# calculadora

./: README.md
Calculadora/: meson.build  org.afonsocoutinho.calculadora.json
Calculadora/data/: meson.build  org.afonsocoutinho.calculadora.appdata.xml.in  org.afonsocoutinho.calculadora.desktop.in  org.afonsocoutinho.calculadora.gschema.xml
Calculadora/data/icons/: meson.build
Calculadora/po/: POTFILES  meson.build
Calculadora/src/: calculadora.gresource.xml  calculadora.in  main.py  meson.build  window.py  window.ui
